interessenter + organisation slides ver. 2

--- a/slides/thomas.tex
+++ b/slides/thomas.tex
@@ -4,11 +4,20 @@
 	
 	\begin{itemize}
 		\item Fritidsklubber
-		\item Fodbold
-		\item Badminton og tennis
+		\item Sportsklubber
+		\begin{itemize}
+			\item Medlemshåndtering og betaling
+			\item Holde styr på baner
+			\item Holdopbygning og taktik
+		\end{itemize}
 		\item Skydning
 		\item Golf
 		\item Haller
+		\begin{itemize}
+			\item Adminstration af baner og omklædning
+			\item Informationsdeling
+			\item Adminstration af kiosk	
+		\end{itemize}
 		\item Netcaféer
 		\item Sejlklubber
 	\end{itemize}
