--- a/slides/marc.tex
+++ b/slides/marc.tex
@@ -5,7 +5,7 @@
   \begin{itemize}
     \item Generelt problem
     
-    \item Sejlklub specifikt
+    \item Sejlklub specifikationer
     
     \item Management system
     
