--- a/slides/thomas.tex
+++ b/slides/thomas.tex
@@ -25,7 +25,7 @@
 
 \end{frame}
 
-\section{Test}
+\section{Organisation}
 \begin{frame}{Organisation}
 	\framesubtitle{Analyse af organisationen}
 		\begin{itemize}
