--- a/slides/marc.tex
+++ b/slides/marc.tex
@@ -12,7 +12,7 @@
     \item Reducering af arbejdsbyrde
     
   \end{itemize}
-Det er et problem at sejlklubben Sundet bruger unødige ressourcer på fysisk bogføring.
+\textit{Det er et problem at sejlklubben Sundet bruger unødige ressourcer på fysisk bogføring.
 Kan der laves et system som kan håndtere alle de data som bliver bogført, nedsætter
-recourceforbruget og samtidigt er nemt at bruge?
+recourceforbruget og samtidigt er nemt at bruge?}
 \end{frame}
