--- a/slides/nikolaj.tex
+++ b/slides/nikolaj.tex
@@ -8,12 +8,13 @@
 		\begin{itemize}
 		\item Laves ved hjælp Visual Studio
 		\item Metode ikke besluttet endnu
-		\item Web implementering 
+		\item Web applikation 
 		\end{itemize}
 		
 	\item Funktioner
 		\begin{itemize}
-		\item Båd booking
+		\item Reservation af Sejlbåde
+		\item Kalender
 		\item Betaling
 		\item Af-/tilmelding af undervisning
 		\item Medlemshåndtering
