Rettelse af stavefejl

--- a/slides/tristan.tex
+++ b/slides/tristan.tex
@@ -13,7 +13,7 @@
     \vspace{2mm}
     \item Managementsystemer
     \begin{itemize}
-      \item Samling af processor og procedurer.
+      \item Samling af processer og procedurer.
       \item Frivillige organisationer og virksomheder.
       \item Sailing Club Manager er et eksempel.
       \item Nikolaj vil vende tilbage til det\ldots
